# navigation_stack_lab

./: .gitignore  README.md  capture_done_pub.py  center.pgm  mppi_cpu_01.txt  mppi_cpu_02.txt
calib/: .bashrc  encoder_calib_template.csv
docs/: control_and_encoder.md  dd.md  encoder_calib_procedure.md  experiment_icros.md  experiments.md  imu_and_pose_issues.md  interface_spec.md  mapping_issues.md  mppi_tuning.md  navigation_issues.md  sensor_issues.md  tf_and_frame.md  todo_2026-05-06.md  tuning.md
experiments/results/: results.csv
experiments/scenarios/: S1_corridor.yaml  S2_turn.yaml  S3_dynamic_preempt.yaml
mppi_trial_01/: metadata.yaml
mppi_trial_02/: metadata.yaml
nav/bags/slam_test/: metadata.yaml
nav/slam_test/: metadata.yaml
nav/slam_test1/: metadata.yaml
scripts/experiments_analysis/: analyze_all.py  analyze_cpu.py  analyze_cpu_no_plot.py  generate_svg.py  plot_trajectories.py
ws_robot/: .gitignore  frames_2026-03-13_14.21.29.gv  frames_2026-03-18_20.11.19.gv  frames_2026-03-19_12.11.33.gv  frames_2026-03-19_16.02.09.gv
ws_robot/rosbag2_2026_04_13-13_35_46/: metadata.yaml
ws_robot/rosbag2_2026_04_13-13_46_08/: metadata.yaml
ws_robot/src/robot_base/: CMakeLists.txt  README.md  package.xml  robot_base_hw.xml
ws_robot/src/robot_base/config/: DWB_params.yaml  amcl.yaml  controllers.yaml  ekf.yaml  laser_filter.yaml  mppi_coordi.yaml  mppi_params.yaml  nav2_params.yaml  slam.yaml  ydlidar.yaml
ws_robot/src/robot_base/include/robot_base/: can_bridge.hpp  wheel_odometry.hpp
ws_robot/src/robot_base/launch/: bringup.launch.py  bringup_nav.launch.py  bringup_slam.launch.py  nav2.launch.py  patrol.launch.py  robot_pose.launch.py  robot_pose_tf_bridge.py  slam.launch.py  tracking.launch.py  ydlidar.py  ydlidar_launch.py  ydlidar_launch_view.py
ws_robot/src/robot_base/maps/: Keepoutmask.pgm  center.pgm  center.yaml  final_map1.pgm  final_map1.yaml  final_map11.pgm  final_map11.yaml  keepoutmask.yaml  map_test_f.pgm  map_test_f.yaml  map_test_ss.pgm  map_test_ss.yaml  map_v1_debug.pgm  map_v1_debug.yaml  map_v2_test.pgm  map_v2_test.yaml  my_map.pgm  my_map.yaml
ws_robot/src/robot_base/msg/: EncoderTicks.msg
ws_robot/src/robot_base/src/: can_bridge.cpp  can_hw.cpp  imu.cpp  mode_node.py  patrol_node.py  robot_pose_tf_bridge.py  scan_restamper.py  send_waypoints.py  tracking_node.py  wheel_odometry.cpp
ws_robot/src/robot_base/urdf/: robot.urdf
ws_robot/src/robot_bringup/: CMakeLists.txt  package.xml
ws_robot/src/robot_bringup/config/: base.yaml  lidar.yaml  slam_toolbox.yaml
ws_robot/src/robot_bringup/launch/: base.launch.py  slam.launch.py
ws_robot/src/robot_description/: CMakeLists.txt  package.xml
ws_robot/src/robot_description/rviz/: mapping.rviz
ws_robot/src/robot_description/urdf/: robot.urdf.xacro
ws_robot/src/robot_sensors/: CMakeLists.txt  package.xml
ws_robot/src/robot_sensors/src/: lidar_stub.cpp
