<?xml version="1.0"?>
<package format="3">
  <name>robot_base</name>
  <version>0.0.1</version>
  <description>ros2_control hardware interface for CAN diff drive</description>
  <maintainer email="yeachan4842@gmail.com">you</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>pluginlib</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
