<?xml version="1.0"?>
<package format="3">
  <name>robot_base</name>
  <version>0.0.1</version>
  <description>ros2_control hardware interface for CAN diff drive</description>

  <maintainer email="yeachan4842@gmail.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build / run dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Launch/runtime dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>