<?xml version="1.0"?>
<package format="3">
  <name>robot_sensors</name>
  <version>0.0.1</version>
  <description>Sensor wrappers (lidar stub) for pipeline testing.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
</package>
